Fix image paths in index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>iOS | Calculator by Talhaoui</title>
-    <link href="/Images/Logo-IOS.png" rel="shortcut icon"/>
-	<link href="/Images/Logo-IOS.png" rel="apple-touch-icon"/>
+    <link href="Images/Logo-IOS.png" rel="shortcut icon"/>
+	<link href="Images/Logo-IOS.png" rel="apple-touch-icon"/>
 </head>
 <body oncontextmenu="return false">
     <div class="container">
@@ -41,3 +41,4 @@
     
 </script>
 </html>
+
